<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFAFA"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:visibility="gone"
            android:id="@+id/fragmentFun"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:paddingBottom="@dimen/dp_16">

                <TextView
                    android:id="@+id/tvReceive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_24"
                    android:background="@drawable/bg_btn_orange_selector"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_6"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_6"
                    android:text="@string/fun_receive"
                    android:textColor="#FFF"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/tvSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_24"
                    android:background="@drawable/bg_btn_orange_selector"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_6"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_6"
                    android:text="@string/fun_send"
                    android:textColor="#FFF"
                    android:textSize="@dimen/sp_18" />
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FF9E9E9E" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_home_current" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fun_home"
                android:textColor="#E57373"
                android:textSize="@dimen/sp_10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llScan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivScan"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/dp_8"
                android:src="@drawable/ic_scan" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llUser"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivUser"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fun_user"
                android:textColor="#FF9E9E9E"
                android:textSize="@dimen/sp_10" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
